--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,9 +22,9 @@
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
   --background-color: #f1f5f4; /* Background color for the entire website, including individual sections */
-  --default-color: #212529; /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #2d465e; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #08915e; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --default-color: #231F20; /* Default color used for the majority of the text content across the entire website */
+  --heading-color: #6C1111; /* Color for headings, subheadings and title throughout the website */
+  --accent-color: #690D12; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
@@ -32,11 +32,11 @@
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
   --nav-color: rgba(255, 255, 255, 0.75);  /* The default color of the main navmenu links */
-  --nav-hover-color: #08915e; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-hover-color: 690D12; /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
-  --nav-dropdown-color: #212529; /* Used for navigation links of the dropdown items in the navigation menu. */
-  --nav-dropdown-hover-color: #08915e; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  --nav-dropdown-color: #231F20; /* Used for navigation links of the dropdown items in the navigation menu. */
+  --nav-dropdown-hover-color: #690D12; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
 }
 
 /* Color Presets - These classes override global colors when applied to any section or element, providing reuse of the sam color scheme. */
@@ -47,10 +47,10 @@
 }
 
 .dark-background {
-  --background-color: #060606;
+  --background-color: #231F20;
   --default-color: #ffffff;
   --heading-color: #ffffff;
-  --surface-color: #252525;
+  --surface-color: #231F20;
   --contrast-color: #ffffff;
 }
 
@@ -160,8 +160,13 @@ h6 {
 }
 
 .header .logo img {
-  max-height: 32px;
+  /* max-height: 150px; */
+  max-height: 100px;
   margin-right: 8px;
+  background-color: #fff; 
+  border-radius: 50%; 
+  padding: 5px; 
+  object-fit: contain;
 }
 
 .header .logo i {
