--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -449,8 +449,10 @@ h6 {
 }
 
 .footer .footer-about .logo img {
-  max-height: 40px;
+  height: 80px;
   margin-right: 6px;
+  background-color: #fff; 
+  border-radius: 50%;
 }
 
 .footer .footer-about .logo span {
