--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4347,7 +4347,7 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Campus Facilities Section
+# School Facilities Section
 --------------------------------------------------------------*/
 .campus-facilities .container {
   position: relative;
